@@ -1,3 +1,10 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* dev.c (dev_buf_fill): Use munmap instead of vm_deallocate.
+	(dev_close): Likewise.
+	(dev_read): Likewise.
+	* pager.c (pager_write_page): Likewise.
+
 1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* storeio.c (check_open_hook): Translate D_NO_SUCH_DEVICE to ENXIO.
